--- a/app/src/main/res/layout/fragment_today.xml
+++ b/app/src/main/res/layout/fragment_today.xml
@@ -17,12 +17,14 @@
         <TextView
 
             android:id="@+id/txt_city_name"
-            android:textColor="@color/colorPrimary"
-            android:textSize="25sp"
+            android:textColor="#000"
+            android:textSize="30sp"
             android:textStyle="bold"
             android:text="Weather in London,GB"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -31,20 +33,21 @@
 
             <ImageView
                 android:id="@+id/img_weather"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:src="@mipmap/ic_launcher" />
 
 
             <TextView
                 android:id="@+id/txt_temprature"
-                android:textColor="@color/colorPrimary"
+                android:textColor="#000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:text="14 C"
                 android:textSize="50sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                />
 
         </LinearLayout>
 
@@ -52,22 +55,24 @@
         <TextView
 
             android:id="@+id/txt_description"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
+            android:textColor="#000"
+            android:textSize="24sp"
             android:textStyle="bold"
-            android:text="Weather in London,GB"
+            android:text="Welcome London"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
 
         <TextView
 
             android:id="@+id/txt_data_time"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
+            android:textColor="#000"
+            android:textSize="24sp"
             android:textStyle="bold"
-            android:text="Weather in London,GB"
+            android:text="12:00"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
 
         <TableLayout
             android:background="@drawable/border"
@@ -84,7 +89,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Wind"
-                    android:background="@drawable/cell" />
+                    android:background="@drawable/cell"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
 
 
                 <TextView
@@ -93,7 +100,9 @@
                     android:id="@+id/txt_wind"
                     android:text="Speed:1:Deg:1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold" />
 
             </TableRow>
 
@@ -105,6 +114,8 @@
                     android:text="Pressure"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"
 
                     />
 
@@ -115,7 +126,9 @@
                     android:id="@+id/txt_pressure"
                     android:text="1013.75 hpa"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow>
@@ -126,6 +139,8 @@
                     android:text="Humidity"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"
 
                     />
 
@@ -136,7 +151,9 @@
                     android:id="@+id/txt_humidity"
                     android:text="100%"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow>
@@ -147,6 +164,8 @@
                     android:text="Sunrise"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"
 
                     />
 
@@ -157,7 +176,9 @@
                     android:id="@+id/txt_sunrise"
                     android:text="11:00"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow>
@@ -168,6 +189,8 @@
                     android:text="Sunset"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"
 
                     />
 
@@ -178,7 +201,9 @@
                     android:id="@+id/txt_sunset"
                     android:text="18:00"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow>
@@ -189,6 +214,9 @@
                     android:text="Geo_coords"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+
 
                     />
 
@@ -199,7 +227,9 @@
                     android:id="@+id/txt_geo_cood"
                     android:text="32.0,-81.01"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:textColor="#000"
+                    android:textStyle="bold"/>
             </TableRow>
 
 
